# fltk-rs-playground

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: debug-build.yml
assets/: fltk-test.desktop
src/: main.rs
src/widgets/list/: holder.rs  item.rs  items.rs  mod.rs  selected.rs  widget.rs
